--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <i class="fas fa-building fa-stack-1x fa-inverse"></i>
                         </span> 
                         <h4 class="my-3">Residential & Commerical</h4>
-                        <p class="text-muted">From one room projects to large losses, our experts have the work covered. No job is too big or too small. </p>
+                        <p class="text-muted">From one room projects to large losses, our experts have the work covered. Water, fire, mold, asbestos etc. No job is too big or too small.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -68,7 +68,7 @@
                             <i class="fas fa-house-chimney-crack fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Homeowner & Insurance</h4>
-                        <p class="text-muted">No two jobs are the same so adapt scope based on what you need.  Whether it’s homeowner specific requests or carrier guidelines. We’ve got you covered.</p>
+                        <p class="text-muted">No two jobs are the same so we tailor scope based on what you need.  Whether it’s homeowner specific requests or carrier guidelines, we’ve got you covered.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -218,7 +218,7 @@
                                 <h4>Improve Your Margins</h4>
                                 <h4 class="subheading"></h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">With quality estimates, you have clear scope and the budget you need to run a project.  Well executed projects mean margins improve and revenue increases. </p></div>
+                            <div class="timeline-body"><p class="text-muted">With quality estimates, you have clear scope and the budget you need to run your project.  Well executed projects mean margins improve and revenue increases. </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -228,7 +228,7 @@
                                 <h4>It's Cost Effective</h4>
                                 <h4 class="subheading"></h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Having employees is expensive and they cost you even when work is slow.  With Keen Estimates, you only pay for us when you need us. With the average estimate at .06% of your project, your business overhead will decrease.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Having employees is expensive and they cost you even when work is slow.  With Keen Estimates, you only pay for us when you need us. And with the average estimate at .06% of your project, your business overhead will decrease.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -293,7 +293,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">The Keen Team</h2>
-                    <h3 class="section-subheading text-muted">It's important to know the people who write estimates for you. <br>Learn more about your Florida based team below!</h3>
+                    <h3 class="section-subheading text-muted">It's important to know the people who write estimates for you. <br>Learn more about your Florida based team!</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg">
@@ -303,7 +303,7 @@
                             <p class="text-muted">Estimating Lead </p>
                         </div>
                         <div class="row">
-                            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Craig has over 20 years of experience in the industry and is Level 3 Xactimate and IICRC certified. His dedication and expertise ensures every estimate written meets our high standards. When he’s not writing estimates, he likes to write code and develop solutions to support the business. <br> </p></div>
+                            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Craig has over 20 years of experience in the industry and is Level 3 Xactimate and IICRC certified. His dedication and expertise ensures every estimate written meets our high standards. When he’s focused on estimates, he likes to write code and develop solutions to support the business. <br> </p></div>
                         </div>
                     </div>
                     <div class="col-lg">
@@ -345,7 +345,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; 2021 Keen Estimates LLC</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; 2022 Keen Estimates LLC</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                     </div>
                     <div class="col-lg-4 text-lg-end">
