--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Estimate Services</h2>
-                    <h3 class="section-subheading text-muted">Quality estimates are our passion.  <br>We want to write them like an extension of your business.</h3>
+                    <h3 class="section-subheading text-muted">Quality estimates are our passion.  <br>We want to be an extension of your business.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -228,7 +228,7 @@
                                 <h4>It's Cost Effective</h4>
                                 <h4 class="subheading"></h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Having employees is expensive and they cost you even when work is slow.  With Keen Estimates, you only pay for us when you need us. And with the average estimate at .06% of your project, your business overhead will decrease.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Having employees is expensive and they cost you even when work is slow.  With Keen Estimates, you only pay for us when you need us. And with the average estimate at 0.6% of your project, business overhead will decrease.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -259,7 +259,7 @@
                             <br>
                             <li id="benefits"> Custom Formatting </li>
                             <br>
-                            <li id="benefits"> Quick Turn Around </li>
+                            <li id="benefits"> Quick Turnaround </li>
                         </ul>
                         </h5>          
                     </div>
@@ -303,7 +303,7 @@
                             <p class="text-muted">Estimating Lead </p>
                         </div>
                         <div class="row">
-                            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Craig has over 20 years of experience in the industry and is Level 3 Xactimate and IICRC certified. His dedication and expertise ensures every estimate written meets our high standards. When he’s focused on estimates, he likes to write code and develop solutions to support the business. <br> </p></div>
+                            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Craig has over 20 years of experience in the industry and is Level 3 Xactimate and IICRC WRT certified. His dedication and expertise ensures every estimate written meets our high standards. When he’s not focused on estimates, he likes to write code and develop solutions to support the business. <br> </p></div>
                         </div>
                     </div>
                     <div class="col-lg">
